--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>01 CodeLabe | Blog</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../__blog-codelabe/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="../__blog-codelabe/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 <body>
@@ -147,6 +147,6 @@
         </footer>
     </div>
 
-    <script src="../__blog-codelabe/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
