--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 <body>
@@ -40,10 +38,9 @@
         <section class="sec-main">
             <div class="sec-content container">
                 <article class="sec-box" data-aos="fade-up"
-                                         data-aos-anchor-placement="center-bottom"
-                                                                                  >
+                                         data-aos-anchor-placement="center-bottom">
                     <div class="sec-box-header">
-                        <span>17 de Ago, 2024</span>
+                        <span>17 de Jun, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                      
                     </div>
                     <h2>O que é linguagem de programação? Conheça as principais</h2>
@@ -56,7 +53,7 @@
                                          data-aos-anchor-placement="center-bottom"
                                          data-aos-delay="400">
                     <div class="sec-box-header">
-                        <span>12 de jul, 2024</span>
+                        <span>20 de jul, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                                      
                     </div>
 
@@ -84,59 +81,57 @@
                                          data-aos-anchor-placement="center-bottom"
                                          data-aos-delay="300">
                     <div class="sec-box-header">
-                        <span>21 de jun, 2024</span>
+                        <span>24 de jun, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                                             
                     </div>
 
-                    <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+                    <h2>O que é GitHub: para que serve, como funciona e como utilizar?</h2>
 
-                    <p>Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. 
-                        Entre essas opções podemos mencionar os hiperlinks – uma palavra ou termo clicável que direciona o leitor.
+                    <p>O GitHub é uma plataforma de desenvolvimento colaborativo que aloja projetos na nuvem utilizando o sistema de controle de versões chamado Git. 
+                        A plataforma ajuda os desenvolvedores a armazenar e administrar o código e faz o registro de mudanças.
                     </p>
                 </article>
                 <article class="sec-box" data-aos="fade-up"
                                          data-aos-anchor-placement="center-bottom"
                                          data-aos-delay="300">
                     <div class="sec-box-header">
-                        <span>21 de jun, 2024</span>
+                        <span>21 de jul, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                                             
                     </div>
 
-                    <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+                    <h2>O que é JavaScript? - Aprendendo desenvolvimento web</h2>
 
-                    <p>Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. 
-                        Entre essas opções podemos mencionar os hiperlinks – uma palavra ou termo clicável que direciona o leitor.
+                    <p>JavaScript é uma linguagem de programação que permite a você implementar itens complexos em páginas web — toda vez que uma página da web faz mais do que simplesmente mostrar a você informação estática 
+                        — mostrando conteúdo que se atualiza em um intervalo de tempo, mapas interativos ou gráficos 2D/3D animados.
                     </p>
                 </article>
                 <article class="sec-box" data-aos="fade-up"
                                          data-aos-anchor-placement="center-bottom"
                                          data-aos-delay="300">
                     <div class="sec-box-header">
-                        <span>21 de jun, 2024</span>
+                        <span>02 de ago, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                                             
                     </div>
 
-                    <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+                    <h2>O que significa animação 3D?</h2>
 
-                    <p>Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. 
-                        Entre essas opções podemos mencionar os hiperlinks – uma palavra ou termo clicável que direciona o leitor.
+                    <p>De forma parecida com as animações em 2 dimensões, uma animação 3D também explora as dimensões de largura e comprimento. A grande diferença é que esse modelo também utiliza a profundidade, proporcionando a inclusão de efeitos visuais que não seriam possíveis em uma animação 2D.
                     </p>
                 </article>
                 <article class="sec-box" data-aos="fade-up"
                                          data-aos-anchor-placement="center-bottom"
                                          data-aos-delay="300">
                     <div class="sec-box-header">
-                        <span>21 de jun, 2024</span>
+                        <span>09 de ago, 2024</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="iconHeart" fill="none" viewBox="0 0 500 560"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>                                             
                     </div>
 
-                    <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+                    <h2>Porque o mascote do PHP é um elefante?</h2>
 
-                    <p>Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. 
-                        Entre essas opções podemos mencionar os hiperlinks – uma palavra ou termo clicável que direciona o leitor.
+                    <p>A sigla "elefante" era usada em linguagens de programação antigas e que o mascote foi criado pelo artista Vincent Pontier. 
+                        Ramon Filinto desenhou o elefantinho para o curso e o transformou em uma adorável pelúcia.
                     </p>
-                </article>
-                
+                </article>                
             </div>
         </section>        
 
